# beanbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deploy.sh
cmake/: deps.cmake
conf/: bbox.conf  ofdb.conf  ofdb_options.json  ofdb_properties.json
docker/: docker-compose.yml
docker/base/: CentOS-OPPO.repo  Dockerfile  centos-epel-oppo.repo
docker/compile/: Dockerfile
include/: README.md  bbox_version.h  build_version.h  ofdb_version.h
package/: restart.sh  shutdown.sh  startup.sh  stop.sh
src/: CMakeLists.txt  bbox_conf.cpp  bbox_conf.h  bbox_define.h  build_version.cc.in  main.cpp
